[package]
name = "iter-scan"
description = "Iterator scan methods that don't suck"
version = "0.3.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/iter-scan"
repository = "https://github.com/KSXGitHub/iter-scan.git"
keywords = [
  "scan",
  "trait",
  "iterator",
]
categories = ["no-std", "rust-patterns"]
include = [
  "lib.rs",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "iter_scan"
path = "lib.rs"

[features]
default = ["std"]
std = ["replace_with/std"]

[dependencies]
replace_with = { version = "0.1.7", default-features = false, features = [] }
